# cbt-agent

./: .editorconfig  .gitignore  IMPORT_FIXES.md  IMPORT_FIXES_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  verify_imports.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_ASSESSMENT_AND_ENHANCEMENT_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  DEV_GUIDE.md  DIRECTORY_STRUCTURE.md  INDEX.md  MEMORY_LAYER_IMPLEMENTATION.md  PRIVACY.md  RESEARCH.md  SAFETY_NOTICE.md  TERMS.md  plan.md
memory_storage/cli_user/: episodic_memory.json  semantic_memory.json
src/cbt_agent/: __init__.py
src/cbt_agent/agents/: cbt_agent.py
src/cbt_agent/bridge/: http_server.py
src/cbt_agent/config/: config.yaml
src/cbt_agent/evals/: adversarial_tests.py  test_conversations.jsonl
src/cbt_agent/guardrails/: crisis_detector.py  policy_engine.py  validators.py
src/cbt_agent/memory/: __init__.py
src/cbt_agent/policies/: cbt_policy.json
src/cbt_agent/prompts/: system_prompt.md
src/cbt_agent/runtime/: agent_loop.py  input_router.py  message_schemas.py  tool_router.py
src/cbt_agent/tools/: safety_tools.py  therapist_tools.py
tests/runtime/: test_tool_router.py
