[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cbt-agent"
version = "0.1.0"
description = "Policy-enforcing, research-backed CBT-style conversational agent with safety guardrails"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Yu-Chueh Wang", email = "yuchuehw@uci.edu"},
]
keywords = ["cbt", "cognitive-behavioral-therapy", "chatbot", "safety", "mental-health"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Healthcare",
]

dependencies = [
    "openai>=1.40.0",
    "pyyaml>=6.0.1",
    "jsonschema>=4.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "pre-commit>=3.0.0",
    "ipython>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/cbt-agent"
Documentation = "https://github.com/yourusername/cbt-agent/tree/main/docs"
Repository = "https://github.com/yourusername/cbt-agent.git"
Issues = "https://github.com/yourusername/cbt-agent/issues"

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openai.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=agents --cov=guardrails --cov=runtime --cov=tools --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["agents", "guardrails", "runtime", "tools"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]


[tool.setuptools]
packages = [{include = "cbt_agent", from = "src"}]
